@@ -395,12 +395,29 @@ for ( $i = 0, $cnt = count ( $views ); $i < $cnt; $i++ ) {
 ?>
 </select>&nbsp;<?php echo date_to_str ( date ( 'Ymd' ), 
     $DATE_FORMAT_MD, false, false );?>
+<br />
+<select name="pref_DATE_FORMAT_TASK">
+<?php
+  for ( $i = 0, $cnt = count ( $datestyles_task ); $i < $cnt; $i += 2 ) {
+    echo '<option value="' . $datestyles_task[$i] . '"';
+    if ( $prefarray['DATE_FORMAT_TASK'] == $datestyles_task[$i] )
+      echo $selected;
+    echo '>' . $datestyles_task[$i + 1] . "</option>\n";
+  }
+?>
+</select>&nbsp;<?php echo translate ( 'Small Task Date' ) . ' ' .
+  date_to_str ( date ( 'Ymd' ),  $DATE_FORMAT_TASK, false, false );?>
 </td></tr>
 
 <tr><td class="tooltip" title="<?php etooltip( 'time-format-help' )?>">
  <?php etranslate( 'Time format' )?>:</td><td>
  <label><input type="radio" name="pref_TIME_FORMAT" value="12" <?php if ( $prefarray['TIME_FORMAT'] == '12' ) echo $checked;?> /> <?php etranslate( '12 hour' )?></label> 
  <label><input type="radio" name="pref_TIME_FORMAT" value="24" <?php if ( $prefarray['TIME_FORMAT'] != '12' ) echo $checked;?> /> <?php etranslate( '24 hour' )?></label>
+</td></tr>
+<tr><td class="tooltip" title="<?php etooltip("display-minutes-help")?>">
+ <?php etranslate("Display 00 minutes always")?>:</td><td>
+ <label><input type="radio" name="pref_DISPLAY_MINUTES" value="Y" <?php if (  $prefarray['DISPLAY_MINUTES'] != 'N' ) echo $checked;?> /> <?php echo $Yes?></label>&nbsp;
+ <label><input type="radio" name="pref_DISPLAY_MINUTES" value="N" <?php if (  $prefarray['DISPLAY_MINUTES'] == 'N' ) echo $checked;?> /> <?php echo $No?></label>
 </td></tr>
 <tr><td class="tooltip" title="<?php etooltip( 'entry-interval-help' )?>">
  <?php etranslate( 'Entry interval' )?>:</td><td>
