@@ -177,10 +177,13 @@ display-general-use-gmt-help: If enabled, common dates/times are displayed as GM
 Display Common Use Date/Times as GMT: Display Common Use Date/Times as GMT
 date-format-help: Specifies the preferred date format.
 Date format: Date format
+Small Task Date: Small Task Date
 time-format-help: Specifies which time format to use: <br /><em>12 hour:</em> Display times as 3am, 8:30pm, etc.  <br /><em>24 hour:</em> Display times as 300, 2030, etc.
 Time format: Time format
 12 hour: 12 hour
 24 hour: 24 hour
+display-minutes-help: If enabled, minutes ending with :00 will always be displayed
+Display 00 minutes always: Display 00 minutes always
 entry-interval-help: Sets minute interval when editing entry times
 Entry interval: Entry interval
 hour: hour
@@ -1255,6 +1258,7 @@ Dec: Dec
 Unauthorized: Unauthorized
 __month__ __dd__, __yyyy__: __month__ __dd__, __yyyy__
 __month__ __yyyy__: __month__ __yyyy__
+__mm__/__dd__/__yyyy__: __mm__/__dd__/__yyyy__
 This event is private: This event is private
 Conf.: Conf.
 Sun: Sun
@@ -1267,7 +1271,6 @@ Sat: Sat
 WK: WK
 Task Name: Task Name
 Task Due Date: Task Due Date
-__mm__/__dd__/__yyyy__: __mm__/__dd__/__yyyy__
 TASKS: TASKS
 Task_Title: Title
 Due: Due
